--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "svix": "^1.64.1",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.7"
