--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.501.0",
     "next": "15.3.1",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "sonner": "^2.0.3",
     "svix": "^1.64.1",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.7"
