--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.2.2",
     "@radix-ui/react-dropdown-menu": "^2.1.11",
+    "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-slot": "^1.2.0",
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.8.4",
