--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.8.4",
-    "better-sqlite3": "^11.9.1",
+    "better-sqlite3": "^11.10.0",
     "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.501.0",
+    "mysql2": "^3.14.1",
     "next": "^15.3.2",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
