--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.13",
     "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-checkbox": "^1.2.2",
     "@radix-ui/react-dropdown-menu": "^2.1.11",
     "@radix-ui/react-select": "^2.2.2",
-    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-slot": "^1.2.2",
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.8.4",
+    "bcryptjs": "^3.0.2",
     "better-sqlite3": "^11.10.0",
     "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.1",
@@ -37,6 +39,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^22.15.17",
     "@types/react": "^19.1.3",
