--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mysql2": "^3.14.1",
     "next": "^15.3.2",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.3",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
@@ -42,6 +43,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^22.15.17",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19",
     "eslint": "^9",
